<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backGround"
    tools:context=".GameIntro"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_str1"
        android:textSize="310dp"
        android:id="@+id/t_txt"
        android:textColor="#9C27B0"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_str2"
        android:layout_toRightOf="@+id/t_txt"
        android:id="@+id/ic_txt"
        android:textSize="90dp"
        android:layout_marginTop="100dp"
        android:textColor="#EA7AA0"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_str3"
        android:layout_toRightOf="@+id/t_txt"
        android:id="@+id/ac_txt"
        android:textSize="90dp"
        android:layout_marginTop="170dp"
        android:textColor="#4E78E3"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_str4"
        android:layout_toRightOf="@+id/t_txt"
        android:id="@+id/oe_txt"
        android:textSize="90dp"
        android:layout_marginTop="240dp"
        android:textColor="#C8BF19"

        />


</RelativeLayout>