<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="@color/backGround"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="180dp"
        android:textStyle="bold"
        android:text="@string/wel"
        android:fontFamily="cursive"
        android:textColor="#684ED8"
        android:textSize="60dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plr_1"
            android:textSize="25dp"
            android:layout_marginRight="20dp"
            android:textColor="#025950"
        />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/plr_hint"
            android:textSize="30dp"
            android:id="@+id/edt_1"
            android:textColor="#ABC80A"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plr_2"
            android:textSize="25dp"
            android:layout_marginRight="20dp"
            android:textColor="#025950"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/plr_hint"
            android:textSize="30dp"
            android:textColor="#ABC80A"
            android:id="@+id/edt_2"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ent"
        android:id="@+id/ent_btn"

        />


</LinearLayout>