<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backGround"
    tools:context=".gameStart">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plr_1_c"
        android:id="@+id/pl1_c"
        android:textColor="#A34122"
        android:textSize="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plr_2_c"
        android:id="@+id/pl2_c"
        android:textColor="#A34122"
        android:textSize="30dp"
        android:layout_marginBottom="40dp"
        />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/gb1"
                android:layout_margin="10dp"
                android:onClick="check"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/gb2"
                android:layout_margin="10dp"
                android:onClick="check"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/gb3"
                android:onClick="check"
                android:layout_margin="10dp"
                />

        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/gb4"
                android:onClick="check"
                android:layout_margin="10dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:onClick="check"
                android:id="@+id/gb5"
                android:layout_margin="10dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:onClick="check"
                android:id="@+id/gb6"
                android:layout_margin="10dp"
                />

        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/gb7"
                android:onClick="check"
                android:layout_margin="10dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/gb8"
                android:onClick="check"
                android:layout_margin="10dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:onClick="check"
                android:id="@+id/gb9"
                android:layout_margin="10dp"
                />

        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scr"
        android:textSize="50dp"
        android:textColor="#7E0303"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30dp"
        android:textColor="#3273F1"
        android:id="@+id/scr_p1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text=""
        android:textColor="#3273F1"
        android:id="@+id/scr_p2"
        />


</LinearLayout>